[gd_scene load_steps=2 format=2]

[ext_resource path="res://Enemy/EnemySpawn.gd" type="Script" id=1]

[node name="EnemySpawn" type="Node2D"]
script = ExtResource( 1 )

[node name="TopLeft" type="Position2D" parent="."]
position = Vector2( -20, -180 )

[node name="BottomRight" type="Position2D" parent="."]
position = Vector2( 20, 180 )

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
